Change structure & add color picker

--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   <script src="./sketch.js" defer></script>
   <title>Etch A Sketch</title>
 </head>
 <body>
   <div class="header"><h1>Etch A Sketch</h1></div>
-  <div class="grid-container"></div>
+  <div class="sketchContainer">
+    <div class="sketchTools">
+      <button class="classic">Sketch Color <input type="color" class="c-picker"></button>
+    </div>
+    <div class="gridContainer"></div>
+  </div>
 </body>
 </html>
