--- a/index.html
+++ b/index.html
@@ -9,11 +9,31 @@
 </head>
 <body>
   <div class="header"><h1>Etch A Sketch</h1></div>
-  <div class="sketchContainer">
-    <div class="sketchTools">
-      <button class="classic">Sketch Color <input type="color" class="c-picker"></button>
+  <div class="sketchPad">
+    <h2>Sketch-Pad</h2>
+    <div class="sketchContainer">
+      <div class="sketchTools">
+        <button onclick="sketchMode = 'classic'">Sketch Color <input type="color" class="c-picker"></button>
+        <button onclick="sketchMode = 'rainbow'">Rainbow</button>
+        <button onclick="sketchMode = 'eraser'">Eraser</button>
+        <button onclick="clearGrid()" >Clear</button>
+        <button onclick="sketchMode = 'darken'">Darkening Effect</button>
+        <form>
+          <label for="size">Enter Size:</label>
+          <input type="text" id="size" name="size" list="sizes" placeholder="Range : 1 - 60">
+          <datalist id="sizes">
+            <option value="8">
+            <option value="16">
+            <option value="24">
+            <option value="32">
+            <option value="64"></option>
+          </datalist>
+          <button type="submit" class="submit">Submit</button>
+        </form>
+      </div>
+      <div class="gridContainer"></div>
     </div>
-    <div class="gridContainer"></div>
   </div>
+  
 </body>
 </html>
