--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="./style.css">
   <script src="./sketch.js" defer></script>
   <title>Etch A Sketch</title>
+  <link rel="icon" href="./images/paint-icon.png" type="image/png">
 </head>
 <body>
   <!-- Header Section -->
